bk_ida/gccida/g2/dump_regset
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_regset/src/flow.c:4619:16: error: use of undeclared identifier 'off_646752'
fprintf( outf, off_646752, ( unsigned int)v5); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_regset/src/obj/flow.o] Error 1
